<resources>
    <string name="app_name">PRO-RestaurantTool</string>
    <string name="seats">Freie Sitzplätze</string>
    <string name="menu">Tagesmenü</string>
    <string name="reservation">Neue Reservierung</string>
    <string name="statistic">Statistik</string>

    <string name="JaNein">Ja/Nein</string>

    <string name="selected_item">Auswahl:</string>
    <string name="fail_input">Keine Eingabe des Typs!</string>


    <string-array name="SpinnerItems">
        <item>Normaler Besuch</item>
        <item>Gäste mit Kinder</item>
        <item>Geburtstagsfeier</item>
        <item>Firmenfeier</item>
    </string-array>


    <string name="tab">\u0009</string>


    <string name="allergies">
    <br>
    A \u0009    für glutenhaltiges Getreide \n</br>
      <br>
    B \u0009   für Krebstiere und -erzeugnisse \n</br>
         <br>
    C \u0009   für Eier und daraus gewonnene Erzeugnisse \n</br>
         <br>
    D \u0009   für Fisch und Fischerzeugnisse (außer Fischgelatine) \n</br>
         <br>
    E \u0009   für Erdnüsse und -erzeugnisse \n</br>
         <br>
    F \u0009    für Soja (-bohnen) und -erzeugnisse \n</br>
         <br>
    G \u0009    für Milch und Milcherzeugnisse (inklusive Laktose) \n</br>
         <br>
    H \u0009    für Schalenfrüchte und daraus gewonnene Erzeugnisse \n</br>
         <br>
    L \u0009     für Sellerie und -erzeugnisse \n</br>
         <br>
    M \u0009    für Senf und Senferzeugnisse \n</br>
         <br>
    N \u0009    für Sesamsamen und -erzeugnisse \n</br>
         <br>
    O \u0009     für Schwefeldioxid und -erzeugnisse \n</br>
         <br>
    P \u0009     für Lupinen und daraus hergestellte Produkte \n</br>
         <br>
    R \u0009    für Weichtiere wie Schnecken, Muscheln, Tintenfische und daraus hergestellte Erzeugnisse \n</br>
    </string>


    <string name="menuH1">Fischwochen vom 1.4 - 27.4.:</string>

    <string name="menuText">
        <br>
        Forellenfilet (D) \u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009 13,80 € \n</br>
        <br>
        Frisches Forellenfilet mit Petersilienkartoffeln \n\n</br>
        <br>
        Forelle paniert (A, C, D) \u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009 15,30 € \n</br>
        <br>
        Frische Forelle in Panier mit Petersilienkartoffeln \n\n</br>
        <br>
        Zander (D) \u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009 18,00 € \n</br>
        <br>
        Zanderfilet mit Reis und Kartoffeln \n\n</br>
        <br>
        Lachs (D) \u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009 10,80 €\n</br>
         <br>
        Bester Lachs mit Kartoffeln und kleinem Salat\n</br>

    </string>

    <string name="menuFuture">
    <br>
        Bevorstehend: \n\n</br>
    <br>
        - Spargelwochen vom 1.4 - 27.4. \n</br>
    <br>
        - Wildwochen vom 1.4 - 27.4. \n</br>
     <br>
        - Eierschwammerlwochen vom 1.4 - 27.4. \n</br>

    </string>

    <string name="tablewindow">
    <br>
        Tischnummer: \n</br>
    <br>
        Anzahl der Sitzplätze: \n </br>
    <br>
        Kindersitzplätze: \n</br>
     <br>
        Gastgarten: \n</br>
    <br>
        Status: \n</br>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
